Terminados los tipos basicos